final update3